# WgsToGcj

./: CMakeLists.txt  LICENSE  ReadMe.md
include/: WGS2GCJ.h
src/: CMakeLists.txt  WGS2GCJ.cpp
test/: CMakeLists.txt  demo.cpp
